<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Zhongyong Search</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="setting">Settings</string>
    <string name="ignoreCase">Whether to ignore case\nIgnored by default</string>
    <string name="whether_to_support_pinyin_search_support_by_default">Whether to support pinyin search\nDefault support</string>
    <string name="default_search_engine">default search engine</string>
    <string name="add_custom_open_url">Add custom open URL</string>
    <string name="open_local_app_data_automatically_updated_updated_every_time_they_open_search_page">Turn on local app data to automatically update, update every time you open the app</string>
    <string name="update_local_app_data">Update local App data</string>
    <string name="modify_the">edit</string>

    <string name="baidu">Baidu</string>
    <string name="google">Google</string>
    <string name="bing">Bing</string>
    <string name="sogou">Sogou</string>
    <string name="so360">360</string>
    <string name="youtube">YouTube</string>
    <string name="use">use</string>
    <string name="search">search</string>
    <string name="update_local_app_data_is">Updating local app data</string>
    <string name="update_successful">update completed！</string>
    <string name="custom_settings">custom settings</string>
    <string name="editor">edit</string>
    <string name="delete">delete</string>
    <string name="delete_this_data">Whether to delete this piece of data?</string>
    <string name="cancel">Cancel</string>
    <string name="version">Version:</string>
    <string name="global_search">Global search</string>

    <string-array name="search_engine_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <!--        https://www.so.com/s?q=36-->
        <item>5</item>
        <item>6</item>
    </string-array>
</resources>