<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:background="#66ffffff"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:background="@color/purple_500"
            android:elevation="8dp"
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <ImageView
                android:id="@+id/setting_back"
                android:background="?android:attr/selectableItemBackground"
                android:layout_marginStart="4dp"
                android:layout_gravity="center_vertical"
                android:padding="12dp"
                android:src="@drawable/ic_back"
                android:layout_width="48dp"
                android:layout_height="48dp"/>
            <TextView
                android:textColor="@color/white"
                android:layout_marginStart="72dp"
                android:layout_gravity="center_vertical"
                android:textSize="20sp"
                android:text="@string/setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </FrameLayout>
        <!--  大小写忽略-->
        <FrameLayout
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginTop="8dp"
            android:id="@+id/case_click"
            android:layout_width="match_parent"
            android:layout_height="48dp">
            <TextView
                android:text="@string/ignoreCase"
                android:layout_marginEnd="72dp"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.SwitchCompat
                android:clickable="false"
                android:id="@+id/case_switch"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center_vertical|end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </FrameLayout>
        <View
            android:background="#cccccc"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>
        <!--  拼音搜索-->
        <FrameLayout
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/pinyin_click"
            android:layout_width="match_parent"
            android:layout_height="48dp">
            <TextView
                android:text="@string/whether_to_support_pinyin_search_support_by_default"
                android:layout_marginEnd="72dp"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.SwitchCompat
                android:clickable="false"
                android:id="@+id/pinyin_switch"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center_vertical|end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </FrameLayout>
        <View
            android:background="#cccccc"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>
        <!--  默认搜索引擎-->
        <FrameLayout
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/search_engine_click"
            android:layout_width="match_parent"
            android:layout_height="48dp">
            <TextView
                android:text="@string/default_search_engine"
                android:layout_marginEnd="72dp"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/search_engine_spinner"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center_vertical|end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </FrameLayout>
        <View
            android:background="#cccccc"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>
        <TextView
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/add_diy_click"
            android:paddingStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/add_custom_open_url"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>
        <View
            android:background="#cccccc"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>
        <!--  本地app数据自动更新 -->
        <FrameLayout
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/app_update_open_click"
            android:layout_width="match_parent"
            android:layout_height="48dp">
            <TextView
                android:text="@string/open_local_app_data_automatically_updated_updated_every_time_they_open_search_page"
                android:layout_marginEnd="72dp"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.SwitchCompat
                android:clickable="false"
                android:id="@+id/app_update_switch"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center_vertical|end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </FrameLayout>
        <View
            android:background="#cccccc"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>
        <TextView
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/update_app_click"
            android:paddingStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/update_local_app_data"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>
        <View
            android:background="#cccccc"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>
        <TextView
            android:visibility="gone"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/share_click"
            android:paddingStart="16dp"
            android:gravity="center_vertical"
            android:text="分享"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>
        <TextView
            android:visibility="gone"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/about_click"
            android:paddingStart="16dp"
            android:gravity="center_vertical"
            android:text="关于"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>

    </LinearLayout>

</layout>